2006-11-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-ftp-dialog.c:
	* src/gnome-cmd-options-dialog.c:
	* src/gnome-cmd-types.h:
	* src/utils.c:
	* src/utils.h:
	More work on grouping of file size digits

2006-11-23  Dirk Göttel <dgoettel@freenet.de>

	* data/gnome-commander.ebuild:
	Updated ebuild file for gentoo systems

2006-11-22  <petr.pisar@atlas.cz>

	* src/utils.c:
	Use locale formatting for grouping file size digits

2006-11-22  Piotr Eljasiak  <epiotr@use.pl>

	* doc/C/gnome-commander.xml:
	* doc/keys.txt:
	* src/gnome-cmd-main-menu.c:
	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-main-win.h:
	* src/useractions.c:
	* src/useractions.h:
	Added CTRL+SHIFT+= for setting equal panels

2006-11-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.c:
	Fixed mismatched horizontal/vertical menu entries

2006-11-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-options-dialog.c:
	* src/gnome-cmd-types.h:
	New colour scheme

2006-11-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-chmod-dialog.c:
	* src/gnome-cmd-chown-dialog.c:
	* src/gnome-cmd-search-dialog.c:
	Fixed bug #374282 (searching with recursive symlinks)

2006-11-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-selector.c:
	Made symlink prefix ("link to %s") user configurable

2006-11-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Added TRACE() macro

2006-11-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.c:
	i18n

2006-11-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.c:
	Fixed bug #367744 (filename not correctly displayed)

2006-11-10  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* doc/C/gnome-commander.xml:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-lexer.l:
	* src/gnome-cmd-file-selector.c: