@@ -1,3 +1,8 @@
+2006-11-26  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+
+	* src/gnome-cmd-file-list.c:
+	Fixed bug #377706 (selecting files with SHIFT+PGDN)
+
 2006-11-25  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-advrename-dialog.c:
